syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tech.grpc";

service StdentService{
  rpc GetStudent(StudentRequest) returns (StudentResponse) {};
}

message StudentRequest {
int32 id = 1; 
}

message StudentResponse {
string name = 1;
int32 age = 2; 
}
